# PyOptional

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  python-publish.yml
pyoptional/: __init__.py  optional.py  try_functional.py
tests/: test_optional.py  test_try.py
